--- a/dashboard/app/globals.css
+++ b/dashboard/app/globals.css
@@ -1,8 +1,13 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
-  --background: #F2F0EF;
+  --background: #f2f0ef;
   --foreground: #171717;
+  --highlight: #434851;
+  --highlight_text: #11171e;
+  --white: #f2f0ef;
+  --black: #1c1c1c;
+  --red: #c04657;
 }
 
 @theme inline {
@@ -15,12 +20,86 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #F2F0EF;
+    --foreground: #f2f0ef;
   }
+}
+
+html {
+  scrollbar-gutter: stable;
+  scrollbar-width: thin;
+  scrollbar-color: var(--highlight) var(--background);
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  /* overflow-y: scroll; */
+}
+
+/* styles/scrollbar.css */
+.custom-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: var(--highlight) var(--background);
+}
+
+/* For WebKit (Chrome, Safari) */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: var(--highlight_text);
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: var(--highlight);
+  border-radius: 4px;
+}
+
+/* Playlist */
+.playlist-item {
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  font-size: 0.875rem;
+}
+
+.playlist-item-active {
+  background-color: var(--highlight);
+  color: var(--highlight_text);
+  font-weight: 500;
+}
+
+/* Custom styling for range input */
+input[type='range'] {
+  appearance: none;
+  -webkit-appearance: none;
+  width: 100%;
+  height: 6px;
+  background: var(--highlight);
+  border-radius: 5px;
+  outline: none;
+}
+
+/* Thumb for WebKit browsers */
+input[type='range']::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background: var(--highlight_text);
+  cursor: pointer;
+  border: 2px solid var(--white);
+}
+
+/* Thumb for Firefox */
+input[type='range']::-moz-range-thumb {
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background: var(--highlight_text);
+  cursor: pointer;
+  border: 2px solid var(--white);
 }
